parser/antlr/GraphParser.js
// Generated from GraphParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var GraphParserListener = require('./GraphParserListener').GraphParserListener;
var GraphParserBase = require('./GraphParserBase').GraphParserBase;

var grammarFileName = "GraphParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, "'{'", "'}'", "'['", "']'", 
                     "'<'", "'>'", "'='", "'->'", "','", "';'", null, null, 
                     null, null, "'start'", "'goto'", "'if'", "'else'", 
                     "'switch'", "'case'", "'default'", "'import'", "'from'", 
                     "'export'" ];

var symbolicNames = [ null, "HashBangLine", "SingleLineComment", "LineTerminator", 
                      "OpenBrace", "CloseBrace", "OpenBracket", "CloseBracket", 
                      "OpenAngleBracket", "CloseAngleBracket", "Assign", 
                      "Result", "Comma", "SemiColon", "Identifier", "Action", 
                      "Path", "WhiteSpaces", "Start", "Goto", "If", "Else", 
                      "Switch", "Case", "Default", "Import", "From", "Export", 
                      "String" ];

var ruleNames =  [ "program", "moduleStatement", "moduleStatements", "identifier", 
                   "statement", "statementList", "inferenceDeclaration", 
                   "block", "importStatement", "moduleItems", "exportStatement", 
                   "stepStatement", "ifStatement", "expression", "switchStatement", 
                   "switchBlock", "caseClauses", "caseClause", "defaultClause", 
                   "gotoStatement", "startStatement", "eos" ];

function GraphParser (input) {
	GraphParserBase.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

GraphParser.prototype = Object.create(GraphParserBase.prototype);
GraphParser.prototype.constructor = GraphParser;

Object.defineProperty(GraphParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

GraphParser.EOF = antlr4.Token.EOF;
GraphParser.HashBangLine = 1;
GraphParser.SingleLineComment = 2;
GraphParser.LineTerminator = 3;
GraphParser.OpenBrace = 4;
GraphParser.CloseBrace = 5;
GraphParser.OpenBracket = 6;
GraphParser.CloseBracket = 7;
GraphParser.OpenAngleBracket = 8;
GraphParser.CloseAngleBracket = 9;
GraphParser.Assign = 10;
GraphParser.Result = 11;
GraphParser.Comma = 12;
GraphParser.SemiColon = 13;
GraphParser.Identifier = 14;
GraphParser.Action = 15;
GraphParser.Path = 16;
GraphParser.WhiteSpaces = 17;
GraphParser.Start = 18;
GraphParser.Goto = 19;
GraphParser.If = 20;
GraphParser.Else = 21;
GraphParser.Switch = 22;
GraphParser.Case = 23;
GraphParser.Default = 24;
GraphParser.Import = 25;
GraphParser.From = 26;
GraphParser.Export = 27;
GraphParser.String = 28;

GraphParser.RULE_program = 0;
GraphParser.RULE_moduleStatement = 1;
GraphParser.RULE_moduleStatements = 2;
GraphParser.RULE_identifier = 3;
GraphParser.RULE_statement = 4;
GraphParser.RULE_statementList = 5;
GraphParser.RULE_inferenceDeclaration = 6;
GraphParser.RULE_block = 7;
GraphParser.RULE_importStatement = 8;
GraphParser.RULE_moduleItems = 9;
GraphParser.RULE_exportStatement = 10;
GraphParser.RULE_stepStatement = 11;
GraphParser.RULE_ifStatement = 12;
GraphParser.RULE_expression = 13;
GraphParser.RULE_switchStatement = 14;
GraphParser.RULE_switchBlock = 15;
GraphParser.RULE_caseClauses = 16;
GraphParser.RULE_caseClause = 17;
GraphParser.RULE_defaultClause = 18;
GraphParser.RULE_gotoStatement = 19;
GraphParser.RULE_startStatement = 20;
GraphParser.RULE_eos = 21;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.EOF = function() {
    return this.getToken(GraphParser.EOF, 0);
};

ProgramContext.prototype.HashBangLine = function() {
    return this.getToken(GraphParser.HashBangLine, 0);
};

ProgramContext.prototype.moduleStatements = function() {
    return this.getTypedRuleContext(ModuleStatementsContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitProgram(this);
	}
};




GraphParser.ProgramContext = ProgramContext;

GraphParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, GraphParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 45;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===GraphParser.HashBangLine) {
            this.state = 44;
            this.match(GraphParser.HashBangLine);
        }

        this.state = 48;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Identifier) | (1 << GraphParser.Start) | (1 << GraphParser.Import) | (1 << GraphParser.Export))) !== 0)) {
            this.state = 47;
            this.moduleStatements();
        }

        this.state = 50;
        this.match(GraphParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ModuleStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_moduleStatement;
    return this;
}

ModuleStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleStatementContext.prototype.constructor = ModuleStatementContext;

ModuleStatementContext.prototype.inferenceDeclaration = function() {
    return this.getTypedRuleContext(InferenceDeclarationContext,0);
};

ModuleStatementContext.prototype.importStatement = function() {
    return this.getTypedRuleContext(ImportStatementContext,0);
};

ModuleStatementContext.prototype.exportStatement = function() {
    return this.getTypedRuleContext(ExportStatementContext,0);
};

ModuleStatementContext.prototype.startStatement = function() {
    return this.getTypedRuleContext(StartStatementContext,0);
};

ModuleStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterModuleStatement(this);
	}
};

ModuleStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitModuleStatement(this);
	}
};




GraphParser.ModuleStatementContext = ModuleStatementContext;

GraphParser.prototype.moduleStatement = function() {

    var localctx = new ModuleStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, GraphParser.RULE_moduleStatement);
    try {
        this.state = 56;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case GraphParser.Identifier:
            this.enterOuterAlt(localctx, 1);
            this.state = 52;
            this.inferenceDeclaration();
            break;
        case GraphParser.Import:
            this.enterOuterAlt(localctx, 2);
            this.state = 53;
            this.importStatement();
            break;
        case GraphParser.Export:
            this.enterOuterAlt(localctx, 3);
            this.state = 54;
            this.exportStatement();
            break;
        case GraphParser.Start:
            this.enterOuterAlt(localctx, 4);
            this.state = 55;
            this.startStatement();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ModuleStatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_moduleStatements;
    return this;
}

ModuleStatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleStatementsContext.prototype.constructor = ModuleStatementsContext;

ModuleStatementsContext.prototype.moduleStatement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ModuleStatementContext);
    } else {
        return this.getTypedRuleContext(ModuleStatementContext,i);
    }
};

ModuleStatementsContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterModuleStatements(this);
	}
};

ModuleStatementsContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitModuleStatements(this);
	}
};




GraphParser.ModuleStatementsContext = ModuleStatementsContext;

GraphParser.prototype.moduleStatements = function() {

    var localctx = new ModuleStatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, GraphParser.RULE_moduleStatements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 59; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 58;
            this.moduleStatement();
            this.state = 61; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Identifier) | (1 << GraphParser.Start) | (1 << GraphParser.Import) | (1 << GraphParser.Export))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IdentifierContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_identifier;
    return this;
}

IdentifierContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IdentifierContext.prototype.constructor = IdentifierContext;

IdentifierContext.prototype.Identifier = function() {
    return this.getToken(GraphParser.Identifier, 0);
};

IdentifierContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterIdentifier(this);
	}
};

IdentifierContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitIdentifier(this);
	}
};




GraphParser.IdentifierContext = IdentifierContext;

GraphParser.prototype.identifier = function() {

    var localctx = new IdentifierContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, GraphParser.RULE_identifier);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.match(GraphParser.Identifier);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.stepStatement = function() {
    return this.getTypedRuleContext(StepStatementContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.switchStatement = function() {
    return this.getTypedRuleContext(SwitchStatementContext,0);
};

StatementContext.prototype.gotoStatement = function() {
    return this.getTypedRuleContext(GotoStatementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitStatement(this);
	}
};




GraphParser.StatementContext = StatementContext;

GraphParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, GraphParser.RULE_statement);
    try {
        this.state = 69;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case GraphParser.Action:
            this.enterOuterAlt(localctx, 1);
            this.state = 65;
            this.stepStatement();
            break;
        case GraphParser.If:
            this.enterOuterAlt(localctx, 2);
            this.state = 66;
            this.ifStatement();
            break;
        case GraphParser.Switch:
            this.enterOuterAlt(localctx, 3);
            this.state = 67;
            this.switchStatement();
            break;
        case GraphParser.Goto:
            this.enterOuterAlt(localctx, 4);
            this.state = 68;
            this.gotoStatement();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_statementList;
    return this;
}

StatementListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementListContext.prototype.constructor = StatementListContext;

StatementListContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementListContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterStatementList(this);
	}
};

StatementListContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitStatementList(this);
	}
};




GraphParser.StatementListContext = StatementListContext;

GraphParser.prototype.statementList = function() {

    var localctx = new StatementListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, GraphParser.RULE_statementList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 72; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 71;
            this.statement();
            this.state = 74; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Action) | (1 << GraphParser.Goto) | (1 << GraphParser.If) | (1 << GraphParser.Switch))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function InferenceDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_inferenceDeclaration;
    return this;
}

InferenceDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InferenceDeclarationContext.prototype.constructor = InferenceDeclarationContext;

InferenceDeclarationContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

InferenceDeclarationContext.prototype.Assign = function() {
    return this.getToken(GraphParser.Assign, 0);
};

InferenceDeclarationContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

InferenceDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterInferenceDeclaration(this);
	}
};

InferenceDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitInferenceDeclaration(this);
	}
};




GraphParser.InferenceDeclarationContext = InferenceDeclarationContext;

GraphParser.prototype.inferenceDeclaration = function() {

    var localctx = new InferenceDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, GraphParser.RULE_inferenceDeclaration);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 76;
        this.identifier();
        this.state = 77;
        this.match(GraphParser.Assign);
        this.state = 78;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.OpenBrace = function() {
    return this.getToken(GraphParser.OpenBrace, 0);
};

BlockContext.prototype.CloseBrace = function() {
    return this.getToken(GraphParser.CloseBrace, 0);
};

BlockContext.prototype.statementList = function() {
    return this.getTypedRuleContext(StatementListContext,0);
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitBlock(this);
	}
};




GraphParser.BlockContext = BlockContext;

GraphParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, GraphParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 80;
        this.match(GraphParser.OpenBrace);
        this.state = 82;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << GraphParser.Action) | (1 << GraphParser.Goto) | (1 << GraphParser.If) | (1 << GraphParser.Switch))) !== 0)) {
            this.state = 81;
            this.statementList();
        }

        this.state = 84;
        this.match(GraphParser.CloseBrace);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ImportStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_importStatement;
    return this;
}

ImportStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ImportStatementContext.prototype.constructor = ImportStatementContext;

ImportStatementContext.prototype.Import = function() {
    return this.getToken(GraphParser.Import, 0);
};

ImportStatementContext.prototype.moduleItems = function() {
    return this.getTypedRuleContext(ModuleItemsContext,0);
};

ImportStatementContext.prototype.From = function() {
    return this.getToken(GraphParser.From, 0);
};

ImportStatementContext.prototype.Path = function() {
    return this.getToken(GraphParser.Path, 0);
};

ImportStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterImportStatement(this);
	}
};

ImportStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitImportStatement(this);
	}
};




GraphParser.ImportStatementContext = ImportStatementContext;

GraphParser.prototype.importStatement = function() {

    var localctx = new ImportStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, GraphParser.RULE_importStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 86;
        this.match(GraphParser.Import);
        this.state = 87;
        this.moduleItems();
        this.state = 88;
        this.match(GraphParser.From);
        this.state = 89;
        this.match(GraphParser.Path);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ModuleItemsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_moduleItems;
    return this;
}

ModuleItemsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleItemsContext.prototype.constructor = ModuleItemsContext;

ModuleItemsContext.prototype.OpenBrace = function() {
    return this.getToken(GraphParser.OpenBrace, 0);
};

ModuleItemsContext.prototype.CloseBrace = function() {
    return this.getToken(GraphParser.CloseBrace, 0);
};

ModuleItemsContext.prototype.identifier = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IdentifierContext);
    } else {
        return this.getTypedRuleContext(IdentifierContext,i);
    }
};

ModuleItemsContext.prototype.Comma = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(GraphParser.Comma);
    } else {
        return this.getToken(GraphParser.Comma, i);
    }
};


ModuleItemsContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterModuleItems(this);
	}
};

ModuleItemsContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitModuleItems(this);
	}
};




GraphParser.ModuleItemsContext = ModuleItemsContext;

GraphParser.prototype.moduleItems = function() {

    var localctx = new ModuleItemsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, GraphParser.RULE_moduleItems);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 91;
        this.match(GraphParser.OpenBrace);
        this.state = 97;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 92;
                this.identifier();
                this.state = 93;
                this.match(GraphParser.Comma); 
            }
            this.state = 99;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
        }

        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===GraphParser.Identifier) {
            this.state = 100;
            this.identifier();
            this.state = 102;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===GraphParser.Comma) {
                this.state = 101;
                this.match(GraphParser.Comma);
            }

        }

        this.state = 106;
        this.match(GraphParser.CloseBrace);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ExportStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_exportStatement;
    return this;
}

ExportStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ExportStatementContext.prototype.constructor = ExportStatementContext;


 
ExportStatementContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ExportDeclarationContext(parser, ctx) {
	ExportStatementContext.call(this, parser);
    ExportStatementContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ExportDeclarationContext.prototype = Object.create(ExportStatementContext.prototype);
ExportDeclarationContext.prototype.constructor = ExportDeclarationContext;

GraphParser.ExportDeclarationContext = ExportDeclarationContext;

ExportDeclarationContext.prototype.Export = function() {
    return this.getToken(GraphParser.Export, 0);
};

ExportDeclarationContext.prototype.eos = function() {
    return this.getTypedRuleContext(EosContext,0);
};

ExportDeclarationContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

ExportDeclarationContext.prototype.inferenceDeclaration = function() {
    return this.getTypedRuleContext(InferenceDeclarationContext,0);
};
ExportDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterExportDeclaration(this);
	}
};

ExportDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitExportDeclaration(this);
	}
};



GraphParser.ExportStatementContext = ExportStatementContext;

GraphParser.prototype.exportStatement = function() {

    var localctx = new ExportStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 20, GraphParser.RULE_exportStatement);
    try {
        localctx = new ExportDeclarationContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 108;
        this.match(GraphParser.Export);
        this.state = 111;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
        switch(la_) {
        case 1:
            this.state = 109;
            this.identifier();
            break;

        case 2:
            this.state = 110;
            this.inferenceDeclaration();
            break;

        }
        this.state = 113;
        this.eos();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StepStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_stepStatement;
    return this;
}

StepStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StepStatementContext.prototype.constructor = StepStatementContext;

StepStatementContext.prototype.Action = function() {
    return this.getToken(GraphParser.Action, 0);
};

StepStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterStepStatement(this);
	}
};

StepStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitStepStatement(this);
	}
};




GraphParser.StepStatementContext = StepStatementContext;

GraphParser.prototype.stepStatement = function() {

    var localctx = new StepStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 22, GraphParser.RULE_stepStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 115;
        this.match(GraphParser.Action);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IfStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = GraphParser.RULE_ifStatement;
    return this;
}

IfStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfStatementContext.prototype.constructor = IfStatementContext;

IfStatementContext.prototype.If = function() {
    return this.getToken(GraphParser.If, 0);
};

IfStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

IfStatementContext.prototype.Result = function() {
    return this.getToken(GraphParser.Result, 0);
};

IfStatementContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};

IfStatementContext.prototype.Else = function() {
    return this.getToken(GraphParser.Else, 0);
};

IfStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.enterIfStatement(this);
	}
};

IfStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof GraphParserListener ) {
        listener.exitIfStatement(this);
	}
};




GraphParser.IfStatementContext = IfStatementContext;

GraphParser.prototype.ifStatement = function() {
